# bmi

./: .gitignore  README.md  cfgrun.sh  changeappid.sh  com.github.philippkosarev.bmi.json  io.github.philippkosarev.bmi.json  librun.sh  meson.build  run  run-config.toml  run-flatpak.sh  run-native.sh  run.sh  update_po.sh
data/: com.github.philippkosarev.bmi.desktop.in  com.github.philippkosarev.bmi.metainfo.xml.in  com.github.philippkosarev.bmi.service.in  io.github.philippkosarev.bmi.desktop.in  io.github.philippkosarev.bmi.gschema.xml  io.github.philippkosarev.bmi.metainfo.xml.in  io.github.philippkosarev.bmi.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  bmi.pot  es.po  es.po~  fr.po  fr.po~  it.po  meson.build  pt_BR.po  ru.po  ru.po~  uk.po  uk.po~  vi.po
src/: .goutputstream-965GW2  bmi.gresource.xml  bmi.in  bmi_widgets.py  calculator.py  main.py  meson.build  style.css  window.blp  window.py
src/preferences/: preferences.blp  preferences.py  preferences_switch.py
src/rows/: dropdown_row.py
src/widgets/: __init__.py  base_row.py  distance_row.py  gender_row.py  group.py  mass_row.py  meson.build  result_dialog.blp  result_dialog.py  result_row.blp  result_row.py  shared.py  spin_row.py  switch_row.py  time_row.py
src/window/: window.blp  window.py
