widget_sources = [
  '__init__.py',
  'shared.py',
  # Input
  'base_row.py',
  'switch_row.py',
  'dropdown_row.py',
  'spin_row.py',
  'distance_row.py',
  'mass_row.py',
  'time_row.py',
  # Output
  'result_row.py',
  'result_dialog.py',
  # Other
  'group.py',
]

install_data(widget_sources, install_dir: moduledir / 'widgets')